doing carrierwave instead. I know it works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,8 @@
       </div><!--/row-->
 
       <footer>
-        <span class="glyphicon glyphicon-folder-open 2017"></span>_2017
+        <br>
+        <span class="glyphicon glyphicon-folder-open 2017"></span>_2017 by Brock Tillotson
       </footer>
 
     </div> <!-- /container -->
