--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require custom
+ *= require jquery.Jcrop
  *= require devise_bootstrap_views
  *= require_tree .
  *= require_self
