--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,9 +32,12 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
-        <%= f.text_field :current_password, class: 'form-control' %>
+        <%= f.label :profile_picture %>
+        <%= f.file_field :avatar, accept: 'image/jpeg, image/gig, image/png' %>
       </div>
+
+
+
       <%= f.submit t('.update', default: 'Update'), class: 'btn btn-primary' %>
     <% end %>
   </div>
@@ -43,3 +46,13 @@
 <p><%= t('.unhappy', default: 'Unhappy') %>? <%= link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete %>.</p>
 
 <%= link_to t('.back', default: 'Back'), :back %>
+
+
+<script type="text/javascript">
+  $('#user_avatar').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
