--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,11 @@
       <div class="form-group">
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </div>
 
+      <div class="form-group">
+        <%= f.label :profile_picture %>
+        <%= f.file_field :avatar, accept: 'image/jpeg, image/gig, image/png'  %>
       </div>
 
       <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
@@ -37,3 +41,12 @@
   </div>
 </div>
 <%= render 'devise/shared/links' %>
+
+<script type="text/javascript">
+  $('#user_avatar').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
