--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,6 +1,8 @@
-<p><%= t('.greeting', recipient: @resource.email, default: "Welcome #{@resource.email}!") %></p>
+<h1>Welcome to the 6th Annual NFL Playoff ATS Challenge!</h1>
 
 <p><%= t('.instruction', default: 'You can confirm your account email through the link below:') %></p>
 
 <p><%= link_to t('.action', default: 'Confirm my account'),
          confirmation_url(@resource, confirmation_token: @token, locale: I18n.locale) %></p>
+
+<p>Now go make some great picks!</p>
