changed heroku app name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "NFL Contest 2017" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "NFL ATS Challenge 2017" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -29,7 +29,7 @@
         </button>
         <a class="navbar-brand" href= <%= root_path %> >
           <i class="ionicons ion-ios-americanfootball-outline"></i>
-          NFL Contest
+          NFL ATS Challenge 2017
         </a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
