--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Home Page</h1>
-
-<%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<%= render 'matchup' %>
+<%= render 'matchup' %>
+<%= render 'matchup' %>
+<%= render 'matchup' %>
