--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,177 @@
-.black-font {
-  color: black;
+.profile-pic {
+  border-radius: 10px;
+
+}
+
+.lock {
+  color: white;
+}
+
+.focus-btn {
+  background: #9e9c9c;
+}
+
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+
+
+.card {
+  width:100%;
+  height:150px;
+  overflow: hidden;
+  background:transparent;
+  margin:auto;
+  margin-top: 20px;
+  border-radius:10px;
+  -webkit-border-radius:10px;
+  -moz-border-radius:10px;
+  box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
+  &_left {
+    width:40%;
+    height:150px;
+    float:left;
+    overflow:hidden;
+    background:transparent;
+    img {
+      height:150px;
+      min-width: 100%;
+      margin-left: 50%;
+      transform: translateX(-50%);
+      justify-content: center;
+      border-radius:10px 0 0 10px;
+      -webkit-border-radius:10px 0 0 10px;
+      -moz-border-radius:10px 0 0 10px;
+      position:relative;
+    }
+  }
+  &_right {
+    width:60%;
+    float:left;
+    background:#000000;
+    height:150px;
+    border-radius:0 10px 10px 0;
+    -webkit-border-radius:0 10px 10px 0;
+    -moz-border-radius:0 10px 10px 0;
+   h1 {
+    color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight:50;
+    text-align:left;
+    font-size:20px;
+    margin:10px 0 0 0;
+    padding:0 0 0 40px;
+    letter-spacing:1px;
+   }
+    &__details {
+      ul {
+        list-style-type:none;
+        padding:0 0 0 40px;
+        margin:10px 0 0 0;
+        li {
+          display:inline;
+          color:#e3e3e3;
+          font-family: 'Montserrat', sans-serif;
+          font-weight:400;
+          font-size:14px;
+          padding:0 40px 0 0;
+        }
+      }
+    }
+    &__rating {
+      &__stars {
+        position:relative;
+        right:160px;
+        margin:10px 0 10px 0;
+          fieldset, label { margin: 0; padding: 0; }
+.rating {
+  border: none;
+}
+
+.rating > input { display: none; }
+.rating > label:before {
+  margin: 5px;
+  font-size: 1.25em;
+  display: inline-block;
+  content: "\f005";
+  font-family: FontAwesome;
+}
+
+.rating > .half:before {
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label {
+  color: #ddd;
+  float:right;
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+      }
+    }
+    &__review {
+      p {
+        color:white;
+        font-family: 'Montserrat', sans-serif;
+        font-size:12px;
+        padding:0 40px 0 40px;
+        letter-spacing:1px;
+        margin:10px 0 10px 0;
+        line-height:20px;
+      }
+      a {
+        text-decoration:none;
+        font-family: 'Montserrat', sans-serif;
+        font-size:14px;
+        padding:0 0 0 40px;
+        color:#ffda00;
+        margin:0;
+      }
+    }
+&__button {
+      a {
+        color:#ffda00;
+        text-decoration:none;
+        font-family: 'Montserrat', sans-serif;
+        border:2px solid #ffda00;
+        padding:10px 10px 10px 40px;
+        font-size:12px;
+        background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/COMdoWZ.png);
+        background-size:12px 12px;
+        background-repeat:no-repeat;
+            background-position: 7% 50%;
+        border-radius:5px;
+          -webkit-transition-property: all;
+          transition-property: all;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+      }
+      a:hover {
+            color: #000000;
+  background-color: #ffda00;
+        background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/343086/rFQ5dHA.png);
+          background-size:12px 12px;
+        background-repeat:no-repeat;
+            background-position: 10% 50%;
+  cursor: pointer;
+  -webkit-transition-property: all;
+          transition-property: all;
+  -webkit-transition-duration: .5s;
+          transition-duration: .5s;
+      }
+        padding:0 0 0 40px;
+        margin:30px 0 0 0;
+    }
+}
 }
