--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,59 @@
 <%= bootstrap_devise_error_messages! %>
-<div class="panel panel-default devise-bs">
-  <div class="panel-heading">
-    <h4><%= t('.sign_up for football!', default: 'Sign up for football!') %></h4>
+
+<div class="row">
+  <div class="col-md-3">
+ </div>
+  <div class = "col-md-6 col-sm-12">
+
+
+    <div class="panel panel-default devise-bs">
+      <div class="panel-heading">
+        <h4><%= t('.sign_up for football!', default: 'Sign up for football!') %></h4>
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :username %>
+            <%= f.text_field :username, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :full_name %>
+            <%= f.text_field :full_name, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :profile_picture %>
+            <%= f.file_field :avatar, accept: 'image/jpeg, image/gig, image/png'  %>
+          </div>
+          <h4> You will recieve a confirmation email after account creation </h4>
+          <%= f.submit t('.sign_up', default: 'Sign up'), class: "btn btn-dark btn-lg btn-block" %>
+
+        <% end %>
+      </div>
+    </div>
+    <%= render 'devise/shared/links' %>
+
   </div>
-  <div class="panel-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
-
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :username %>
-        <%= f.text_field :username, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :full_name %>
-        <%= f.text_field :full_name, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :profile_picture %>
-        <%= f.file_field :avatar, accept: 'image/jpeg, image/gig, image/png'  %>
-      </div>
-
-      <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
-    <% end %>
+  <div class="col-md-3">
   </div>
 </div>
-<%= render 'devise/shared/links' %>
 
 <script type="text/javascript">
   $('#user_avatar').bind('change', function() {
