--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,19 +1,19 @@
 <% if controller_name != 'sessions' %>
-  <%= link_to t('.sign_in', default: 'Sign in'), new_session_path(resource_name) %><br />
+  <%= button_to t('.sign_in', default: 'Sign in'), new_session_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block focus-btn" %><br />
 <% end %>
 
 <% if devise_mapping.registerable? && controller_name != 'registrations' %>
 
-    <%= button_to t('.sign_up', default: 'Sign up'), new_registration_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block"%><br />
+    <%= button_to t('.sign_up', default: 'Sign up'), new_registration_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block focus-btn"%><br />
 
 <% end %>
 
 <% if devise_mapping.recoverable? && controller_name != 'passwords' %>
-    <%= button_to t('.forgot_your_password', default: 'Forgot your password?'), new_password_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block" %><br />
+    <%= button_to t('.forgot_your_password', default: 'Forgot your password?'), new_password_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block focus-btn" %><br />
 <% end %>
 
 <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= button_to t('.didn_t_receive_confirmation_instructions', default: "Didn't receive confirmation instructions?"), new_confirmation_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block" %><br />
+    <%= button_to t('.didn_t_receive_confirmation_instructions', default: "Didn't receive confirmation instructions?"), new_confirmation_path(resource_name), method: :get, class: "btn btn-dark btn-lg btn-block focus-btn" %><br />
 <% end %>
 
 <% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
