--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<div class="page-header">
+  <h1>Open Bets <small>Choose wisely</small></h1>
+</div>
+
 <% @matchups.each do |matchup| %>
   <div class="panel panel-default matchup">
 
@@ -20,7 +24,7 @@
 
                 <div class="row row-no-padding row-one">
                   <div class="col-xs-12">
-                    <h1><%= matchup.away_team%> <%=matchup.away_line %></h1>
+                    <h1><%= matchup.away_team%> <%=matchup.away_line_style %></h1>
                   </div>
                 </div>
                 <div class="row row-no-padding row-two">
@@ -46,7 +50,7 @@
 
                 <div class="row row-no-padding row-one">
                   <div class="col-xs-12">
-                    <h1><%= matchup.home_team%> <%=matchup.home_line %></h1>
+                    <h1><%= matchup.home_team%> <%=matchup.home_line_style %></h1>
                   </div>
                 </div>
                 <div class="row row-no-padding row-two">
