--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
               </a>
             </li>
             <% if user_signed_in? %>
+              <li><%= link_to "Leaderboard", users_path %></li>
               <li><%= link_to "Rules", '/rules' %></li>
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_registration_path  %></li>
