--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,15 +31,15 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li>
-              <a class="navbar-brand" href= <%= root_path %> >
+              <a class="navbar-brand on-top" href= <%= root_path %> >
                 <i class="ionicons ion-ios-americanfootball-outline"></i>
                 NFL ATS Challenge 2017
               </a>
             </li>
             <% if user_signed_in? %>
+              <li><%= link_to "My Profile", current_user %></li>
               <li><%= link_to "Leaderboard", users_path %></li>
               <li><%= link_to "Rules", '/rules' %></li>
-              <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_registration_path  %></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete  %></li>
             <% else %>
