--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <div class="row">
+
+    <!-- Profile Card -->
   <div class="col-md-4 col-sm-12">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -20,8 +22,128 @@
     </div>
   </div>
 
+  <!-- Status Readers-->
   <div class="col-md-8 col-sm-12">
+    <div class="row status-board">
 
+      <div class="col-md-4 col-sm-12">
+        <li class="list-group-item">
+          Points Scored: <span class="badge">10</span>
+        </li>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <li class="list-group-item">
+          Unpicked Games: <span class="badge">4</span>
+        </li>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <li class="list-group-item">
+          Locks Remaining: <span class="badge">
+            <%= current_user.lock_points %>
+          </span>
+        </li>
+      </div>
+    </div>
   </div>
+
+  <!-- Pick Cards -->
+  <div class="col-md-8 col-sm-12">
+    <% @picks.each do |pick| %>
+      <% if pick.choice == "away" %>
+         <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card_left">
+                <img class="" src=<%= pick.matchup.away_picture %>/>
+                <% if pick.lock %>
+                  <span class="glyphicon ion-ios-locked"></span>
+                <% end %>
+              </div>
+              <div class="card_right">
+                <div class="container-fluid right-con">
+                  <div class="row row-no-padding row-one">
+                    <div class="col-xs-12">
+                      <h1><%= pick.matchup.away_team%> <%= pick.matchup.away_line_style %></h1>
+                    </div>
+                  </div>
+                  <div class="row row-no-padding row-two">
+                    <div class="col-xs-6 detail-holder">
+                      <p class="details"><%= pick.matchup.away_detail%></p>
+                    </div>
+                    <div class="col-xs-6 detail-holder">
+                      <p class="details">Away</p>
+                    </div>
+                  </div>
+                  <div class="row row-no-padding row-three">
+                    <div class="col-sm-6 btns">
+                       <%= link_to pick, method: :delete do %>
+                          <button class="delete-pick  cool-btn">
+                            Delete Pick
+                          </button>
+                        <% end %>
+                    </div>
+                    <div class="col-sm-6 btns">
+                         <div class="cool-div">
+                           <div class="status">
+                             Pick is: <%=pick.status%>
+                           </div>
+                         </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% else %>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card_left">
+                  <img class="" src=<%= pick.matchup.home_picture %>/>
+                  <% if pick.lock %>
+                    <span class="glyphicon ion-ios-locked"></span>
+                  <% end %>
+              </div>
+              <div class="card_right">
+                <div class="container-fluid right-con">
+                  <div class="row row-no-padding row-one">
+                    <div class="col-xs-12">
+                      <h1><%= pick.matchup.home_team%> <%= pick.matchup.home_line_style %></h1>
+                    </div>
+                  </div>
+                  <div class="row row-no-padding row-two">
+                    <div class="col-xs-6 detail-holder">
+                      <p class="details"><%= pick.matchup.home_detail %></p>
+                    </div>
+                    <div class="col-xs-6 detail-holder">
+                      <p class="details">Home</p>
+                    </div>
+                  </div>
+                  <div class="row row-no-padding row-three">
+                    <div class="col-sm-6 btns">
+                       <%= link_to pick, method: :delete do %>
+                          <button class="delete-pick cool-btn">
+                            Delete Pick
+                          </button>
+                        <% end %>
+                    </div>
+                    <div class="col-sm-6 btns">
+                         <div class="cool-div">
+                           <div class="status">
+                             Pick is: <%=pick.status%>
+                           </div>
+                         </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
 
 </div>
