--- a/app/views/matchups/new.html.erb
+++ b/app/views/matchups/new.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="col-md-6">
       <%= simple_form_for(@matchup, html: { class: 'form-horizontal' }) do |f| %>
+        <%= f.input :title %>
         <%= f.input :home_team %>
         <%= f.input :home_line %>
         <%= f.input :home_detail %>
@@ -13,6 +14,7 @@
         <%= f.input :away_line %>
         <%= f.input :away_detail %>
         <%= f.input :away_picture %>
+        <%= f.input :closing_time, label: 'Closing Time (UTC Timezone):' %>
         <%= f.button :submit %>
       <% end %>
     </div>
