--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
               <li><%= link_to "My Profile", current_user %></li>
               <li><%= link_to "Leaderboard", users_path %></li>
               <li><%= link_to "Rules", '/rules' %></li>
+              <% if current_user.admin %>
+                <li><%= link_to "Admin", '/admin' %></li>
+              <% end %>
               <li><%= link_to "Settings", edit_user_registration_path  %></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete  %></li>
             <% else %>
