--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,30 +2,9 @@
 <div class="page-header">
   <h1>Open Bets <small>Choose wisely</small></h1>
   <div class="row">
-    <div class="col-md-8 col-sm-12">
-      <div class="row status-board">
 
-        <!-- Status Readers-->
-        <div class="col-md-4 col-sm-12">
-          <li class="list-group-item">
-            Points Scored: <span class="badge">10</span>
-          </li>
-        </div>
-        <div class="col-md-4 col-sm-12">
-          <li class="list-group-item">
-            Unpicked Games: <span class="badge">4</span>
-          </li>
-        </div>
-        <div class="col-md-4 col-sm-12">
-          <li class="list-group-item">
-            Locks Remaining: <span class="badge">
-              <%= current_user.lock_points %>
-            </span>
-          </li>
-        </div>
+  <%= render 'users/status_board' %>
 
-      </div>
-    </div>
   </div>
 </div>
 
